using doc model

--- a/popup.html
+++ b/popup.html
@@ -41,6 +41,15 @@
                         </div>
                         <button class="btn btn-primary" id="sendBtn">Send</button>
                     </form>
+                    <br>
+                    <form>
+                        <div class="form-group">
+                            <label for="textMsg">Message for ES from Model</label>
+                            <input type="text" class="form-control" id="docName" aria-describedby="docHelp" placeholder="Enter doc id">
+                            <small id="docHelp" class="form-text text-muted">Sending simple docs to ES based on predefined model.</small>
+                        </div>
+                        <button class="btn btn-primary" id="sendDocBtn">Send</button>
+                    </form>
                 </div>
             </div>
             <div id="TAKE" class="tab-pane fade">
